# SPHinXsys-learning

src/for_2D_build/geometries/: multi_polygon_shape.cpp
src/for_2D_build/particles/: solid_particles_supplementary.cpp
src/for_3D_build/geometries/: geometric_shape.cpp  geometric_shape.h
src/for_3D_build/particles/: solid_particles_supplementary.cpp
src/shared/adaptations/: adaptation.cpp
src/shared/bodies/: base_body.h  base_body_part.h
src/shared/body_relations/: contact_body_relation.h
src/shared/geometries/: complex_shape.cpp  complex_shape.h  level_set.cpp
src/shared/io_system/: io_base.h  io_environment.cpp  io_observation.h  io_vtk.cpp  io_vtk.h
src/shared/particles/: base_particles.hpp  solid_particles.cpp  solid_particles.h  solid_particles_variable.cpp  solid_particles_variable.h
tests/2d_examples/test_2d_airfoil/: airfoil_2d.cpp
tests/2d_examples/test_2d_elastic_gate/: elastic_gate.cpp
tests/2d_examples/test_2d_hydrostatic_fsi/: hydrostatic_fsi.cpp
tests/2d_examples/test_2d_hydrostatic_fsi_initialP/: hydrostatic_fsi_initialP.cpp
tests/2d_examples/test_2d_marine_panel_shell/: CMakeLists.txt  marine_panel_shell.cpp
tests/2d_examples/test_2d_marine_panel_volume/: marine_panel_volume.cpp
tests/2d_examples/test_2d_single_phase_dambreak_to_sloshing_elasticBaffle/: single_phase_dambreak_to_sloshing_elasticBaffle.h  single_phase_sloshing_elasticBaffle.cpp
tests/2d_examples/test_2d_single_phase_dambreak_to_sloshing_rigidBaffle/: single_phase_dambreak_to_sloshing_rigidBaffle.cpp  single_phase_dambreak_to_sloshing_rigidBaffle.h
tests/2d_examples/test_2d_standing_wave_addDamping/: standing_wave_addDamping.cpp
tests/2d_examples/test_2d_stfb/: stfb.cpp
tests/2d_examples/test_2d_stlw/: stlw.cpp  stlw.h
tests/extra_source_and_tests/user_particle_relaxation_coronary_shell_bad/: CMakeLists.txt
(+650 files in other folders)
